--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
         </div>
     </div>
     <!-- /hero -->
+    <!-- project -->
     <div class="project">
         <div class="container">
-            <div class="row project__content">
+            <div class="row decor__items">
                 <svg width="100" height="16" viewBox="0 0 100 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <line y1="1.5" x2="100" y2="1.5" stroke="#005BC1" stroke-width="3" />
                     <line x1="50" y1="14.5" x2="100" y2="14.5" stroke="#005BC1" stroke-width="3" />
                 </svg>
-                <a href="#"><h2 class="project__title">Наши проекты</h2></a>
+                <a href="#"><h2 class="decor__title">Наши проекты</h2></a>
             </div>
             <div class="slider">
                 <div class="slider__items">
@@ -177,6 +178,93 @@
             </div>
         </div>
     </div>
+    <!-- /project -->
+    <!-- catalog -->
+    <div class="catalog">
+        <div class="container">
+            <div class="row decor__items">
+                <svg width="100" height="16" viewBox="0 0 100 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <line y1="1.5" x2="100" y2="1.5" stroke="#005BC1" stroke-width="3" />
+                    <line x1="50" y1="14.5" x2="100" y2="14.5" stroke="#005BC1" stroke-width="3" />
+                </svg>
+                <a href="#"><h2 class="decor__title">Каталог продукции</h2></a>
+            </div>
+            <div class="row catalog__items">
+                <a href=""><h3 class="row__hover">Robe</h3></a>
+                <a href=""><h3 class="row__hover">Compulite</h3></a>
+            </div>
+            <div class="row">
+                <div class="col-4 catalog__content">
+                    <img src="./img/catalog_1.png" alt="" class="content__img">
+                    <h4 class="content__text text__1">Статичные светодиодные приборы</h4>
+                </div>
+                <div class="col-4 catalog__content">
+                    <img src="./img/catalog_2.png" alt="" class="content__img">
+                    <h4 class="content__text text__2">Контроллеры</h4>
+                </div>
+                <div class="col-4 catalog__content">
+                    <img src="./img/catalog_3.png" alt="" class="content__img">
+                    <h4 class="content__text text__3">Аксессуары</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /catalog -->
+    <!-- rent -->
+    <div class="rent">
+        <div class="container">
+            <div class="row decor__items">
+                <svg width="100" height="16" viewBox="0 0 100 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <line y1="1.5" x2="100" y2="1.5" stroke="#005BC1" stroke-width="3" />
+                    <line x1="50" y1="14.5" x2="100" y2="14.5" stroke="#005BC1" stroke-width="3" />
+                </svg>
+                <a href="#"><h2 class="decor__title">Аренда оборудования</h2></a>
+            </div>
+            <div class="row rent__items">
+                <div class="col-5 rent__left">
+                    <p class="rent__text">Мы занимаемся прокатом светового и сценического оборудования ведущих мировых производителей, таких как 
+                        Robe, SGM, StudioDue, ChainMaster, Milos, Universal Effects, ArtLighting, MobilTech, Lampo, Martin, Spotlight, Compulite, Eurolite и др.</p>
+                </div>
+                <div class="col-7 rent__right">
+                    <h4 class="rent__subtitle">Новое оборудование, предоставляемое в аренду:</h4>
+                    <div class="slider">
+                        <div class="slider__content">
+                            <div class="col-3"><img src="./img/catalog_3.png" alt="" class="slider__img">
+                            </div>
+                            <div class="col-4">
+                                <div class="slider__list">
+                                    <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                    <ul class="list__content">
+                                        <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                        <li class="list__items">Угол раскрытия 7°</li>
+                                        <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                        <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row slider__content">
+                            <div class="col-6">
+                                <img src="./img/catalog_3.png" alt="" class="slider__img">
+                            </div>
+                            <div class="col-6">
+                                <div class="slider__list">
+                                    <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                    <ul class="list__content">
+                                        <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                        <li class="list__items">Угол раскрытия 7°</li>
+                                        <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                        <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /rent -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script>
