add 'rent' and begin to make 'news' block

--- a/index.html
+++ b/index.html
@@ -229,33 +229,70 @@
                     <h4 class="rent__subtitle">Новое оборудование, предоставляемое в аренду:</h4>
                     <div class="slider">
                         <div class="slider__content">
-                            <div class="col-3"><img src="./img/catalog_3.png" alt="" class="slider__img">
-                            </div>
-                            <div class="col-4">
-                                <div class="slider__list">
-                                    <h4 class="list__title">Robe Robin ParFect 100</h4>
-                                    <ul class="list__content">
-                                        <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
-                                        <li class="list__items">Угол раскрытия 7°</li>
-                                        <li class="list__items">В комплекте рассеивающая линза 40°</li>
-                                        <li class="list__items">Потребляемая мощность 200 Вт</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-6"><img src="./img/catalog_3.png" alt="" class="slider__img">
+                                </div>
+                                <div class="col-6">
+                                    <div class="slider__list">
+                                        <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                        <ul class="list__content">
+                                            <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                            <li class="list__items">Угол раскрытия 7°</li>
+                                            <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                            <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row slider__content">
-                            <div class="col-6">
-                                <img src="./img/catalog_3.png" alt="" class="slider__img">
+                        <div class="slider__content">
+                            <div class="row">
+                                <div class="col-6"><img src="./img/catalog_3.png" alt="" class="slider__img">
+                                </div>
+                                <div class="col-6">
+                                    <div class="slider__list">
+                                        <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                        <ul class="list__content">
+                                            <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                            <li class="list__items">Угол раскрытия 7°</li>
+                                            <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                            <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-6">
-                                <div class="slider__list">
-                                    <h4 class="list__title">Robe Robin ParFect 100</h4>
-                                    <ul class="list__content">
-                                        <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
-                                        <li class="list__items">Угол раскрытия 7°</li>
-                                        <li class="list__items">В комплекте рассеивающая линза 40°</li>
-                                        <li class="list__items">Потребляемая мощность 200 Вт</li>
-                                    </ul>
+                        </div>
+                        <div class="slider__content">
+                            <div class="row">
+                                <div class="col-6"><img src="./img/catalog_3.png" alt="" class="slider__img">
+                                </div>
+                                <div class="col-6">
+                                    <div class="slider__list">
+                                        <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                        <ul class="list__content">
+                                            <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                            <li class="list__items">Угол раскрытия 7°</li>
+                                            <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                            <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slider__content">
+                            <div class="row">
+                                <div class="col-6"><img src="./img/catalog_3.png" alt="" class="slider__img">
+                                </div>
+                                <div class="col-6">
+                                    <div class="slider__list">
+                                        <h4 class="list__title">Robe Robin ParFect 100</h4>
+                                        <ul class="list__content">
+                                            <li class="list__items">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                            <li class="list__items">Угол раскрытия 7°</li>
+                                            <li class="list__items">В комплекте рассеивающая линза 40°</li>
+                                            <li class="list__items">Потребляемая мощность 200 Вт</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -265,11 +302,64 @@
         </div>
     </div>
     <!-- /rent -->
+    <!-- news -->
+    <div class="news">
+        <div class="container">
+            <div class="row decor__news">
+                <div class="decor__block">
+                    <svg width="100" height="16" viewBox="0 0 100 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <line y1="1.5" x2="100" y2="1.5" stroke="#005BC1" stroke-width="3" />
+                        <line x1="50" y1="14.5" x2="100" y2="14.5" stroke="#005BC1" stroke-width="3" />
+                    </svg>
+                    <a href="#"><h2 class="decor__title">Аренда оборудования</h2></a>
+                </div>
+                <a href="#" class="news__btn">Все новости</a>
+            </div>
+            <div class="row">
+
+                <div class="col-6 main__item">
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="./img/main__item.png" alt="" class="main__img">
+                        </div>
+                        <div class="col-6 main__content">
+                            <h4 class="main__title">Семинар Milos</h4>
+                            <p class="main__date">27.01.2019</p>
+                            <p class="main__text">Наши сотрудники прошли последний семинар от компании Milos.
+                                Они получили новый объем знаний, который позволит нашей компании заниматься оборудованием не только мероприятий, 
+                                но производственных помещений.
+                            </p>
+                            <a href="#" class="main__link">Читать полностью...</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-6 news__items">
+                    <div class="row">
+                        <div class="col-6">
+                            <h4 class="news__title">Выставка Prolight+Sound NAMM Russia 2016</h4>
+                            <p class="news__text">30 контрактов, тысячи восторженных посетителей...</p>
+                            <img src="./img/news__1.png" alt="" class="news__img">
+                            <p class="news__date">27.01.2019</p>
+                        </div>
+                        <div class="col-6">
+                            <h4 class="news__title">Семинар  Robe</h4>
+                            <p class="news__text">30 января 2017 года наши сотрудники побывали в Берлине..</p>
+                            <img src="./img/news__2.png" alt="" class="news__img">
+                            <p class="news__date">27.01.2019</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /news -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script>
         $('.slider').slick({
-            dots: true,
             infinite: true,
             speed: 800
         }); 
