finish to make 'news' block

--- a/index.html
+++ b/index.html
@@ -333,19 +333,16 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="col-6 news__items">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-6 news__content">
                             <h4 class="news__title">Выставка Prolight+Sound NAMM Russia 2016</h4>
                             <p class="news__text">30 контрактов, тысячи восторженных посетителей...</p>
                             <img src="./img/news__1.png" alt="" class="news__img">
                             <p class="news__date">27.01.2019</p>
                         </div>
-                        <div class="col-6">
-                            <h4 class="news__title">Семинар  Robe</h4>
+                        <div class="col-6 news__content">
+                            <h4 class="news__title Robe">Семинар Robe</h4>
                             <p class="news__text">30 января 2017 года наши сотрудники побывали в Берлине..</p>
                             <img src="./img/news__2.png" alt="" class="news__img">
                             <p class="news__date">27.01.2019</p>
