--- a/index.html
+++ b/index.html
@@ -353,6 +353,43 @@
         </div>
     </div>
     <!-- /news -->
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row top__block">
+                <h4 class="top__number">(812) 710-80-25</h4>
+                <p class="top__text">191180, Санкт-Петербург, Набережная реки Фонтанки, 90, корпус 1</p>
+                <a href="#" class="top__link">mail@translight.ru</a>
+            </div>
+            <div class="row mid__block">
+                <div class="col-6 mid__items">
+                    <div class="col-4">
+                        <ul class="menu">
+                        <li class="menu__item">О компании</li>
+                        <li class="menu__item">Каталог</li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <ul class="menu">
+                            <li class="menu__item">Наши проекты</li>
+                            <li class="menu__item">Новости</li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <ul class="menu">
+                            <li class="menu__item">Аренда</li>
+                            <li class="menu__item">Сервисное обслуживание</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom__block">
+                <p class="bottom__left">© 2019 ЗАО «Транслайт». Все права защищены.</p>
+                <p class="bottom__right">Разработка и дизайн - D-e-n.ru</p>
+            </div>
+        </div>
+    </footer>
+    <!-- /footer -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script>
