--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <a href=""><h3 class="row__hover">Robe</h3></a>
                 <a href=""><h3 class="row__hover">Compulite</h3></a>
             </div>
-            <div class="row">
+            <div class="row media__row">
                 <div class="col-4 catalog__content">
                     <img src="./img/catalog_1.png" alt="" class="content__img">
                     <h4 class="content__text text__1">Статичные светодиодные приборы</h4>
@@ -392,12 +392,7 @@
     <!-- /footer -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
-    <script>
-        $('.slider').slick({
-            infinite: true,
-            speed: 800
-        }); 
-    </script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
