finished doing Adaptive layout. Project Done!

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <line y1="1.5" x2="100" y2="1.5" stroke="#005BC1" stroke-width="3" />
                         <line x1="50" y1="14.5" x2="100" y2="14.5" stroke="#005BC1" stroke-width="3" />
                     </svg>
-                    <a href="#"><h2 class="decor__title">Аренда оборудования</h2></a>
+                    <a href="#"><h2 class="decor__title">Новости</h2></a>
                 </div>
                 <a href="#" class="news__btn">Все новости</a>
             </div>
@@ -319,7 +319,7 @@
 
                 <div class="col-6 main__item">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-6 left__item">
                             <img src="./img/main__item.png" alt="" class="main__img">
                         </div>
                         <div class="col-6 main__content">
